Fix margin gaps

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     flex-direction: column;
     margin: 0;
     min-height: 100vh
+
 }
 
 .header, .top, .footer {
@@ -36,6 +37,7 @@ body {
     background-color: #1f2937;
     justify-content: space-between;
     flex-shrink: 0;
+    gap: 610px;
 }
 
 .info {
@@ -60,7 +62,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #e5e7eb;
-    padding:  50px 200px;
+    padding:  50px 500px;
 }
 
 .quote-container .quote {
